[gd_scene load_steps=13 format=3 uid="uid://dcexs711wjhws"]

[ext_resource type="Script" path="res://addons/rational/editor/main.gd" id="1_vcojj"]
[ext_resource type="Texture2D" uid="uid://ck5wr3nwuxwhc" path="res://addons/rational/editor/icons/MakeFloating.svg" id="2_rhita"]
[ext_resource type="Texture2D" uid="uid://75cbha306kl8" path="res://addons/rational/icons/Search.svg" id="3_w42pw"]
[ext_resource type="Script" path="res://addons/rational/editor/tree_display.gd" id="4_0erff"]
[ext_resource type="Texture2D" uid="uid://ctvqmx4gqnpt" path="res://addons/rational/editor/icons/add.svg" id="4_7na3o"]
[ext_resource type="Script" path="res://addons/rational/editor/item_list_rational_trees.gd" id="4_hbcub"]
[ext_resource type="Texture2D" uid="uid://c6cbdi2ea0hru" path="res://addons/rational/editor/icons/Forward.svg" id="4_on6xq"]
[ext_resource type="Texture2D" uid="uid://bjhrbenbmpgte" path="res://addons/rational/icons/reload.svg" id="5_h6idu"]
[ext_resource type="Texture2D" uid="uid://cnk30s76yidgx" path="res://addons/rational/editor/icons/Back.svg" id="5_xutei"]

[sub_resource type="Image" id="Image_tmdva"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 5, 224, 224, 224, 74, 224, 224, 224, 120, 224, 224, 224, 105, 230, 230, 230, 30, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 226, 226, 226, 43, 225, 225, 225, 215, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 253, 224, 224, 224, 128, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 238, 238, 238, 15, 224, 224, 224, 228, 224, 224, 224, 227, 226, 226, 226, 77, 224, 224, 224, 8, 224, 224, 224, 32, 225, 225, 225, 157, 224, 224, 224, 255, 225, 225, 225, 109, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 225, 225, 225, 117, 224, 224, 224, 255, 225, 225, 225, 58, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 181, 224, 224, 224, 235, 255, 255, 255, 4, 255, 255, 255, 0, 255, 255, 255, 2, 225, 225, 225, 174, 224, 224, 224, 228, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 226, 226, 226, 86, 224, 224, 224, 255, 226, 226, 226, 44, 230, 230, 230, 10, 224, 224, 224, 213, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 212, 230, 230, 230, 10, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 226, 226, 226, 86, 224, 224, 224, 255, 226, 226, 226, 44, 255, 255, 255, 0, 225, 225, 225, 42, 224, 224, 224, 245, 224, 224, 224, 245, 225, 225, 225, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 180, 224, 224, 224, 238, 255, 255, 255, 3, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 96, 226, 226, 226, 95, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 1, 227, 227, 227, 36, 224, 224, 224, 160, 224, 224, 224, 255, 225, 225, 225, 108, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 224, 224, 224, 64, 224, 224, 224, 255, 224, 224, 224, 249, 225, 225, 225, 124, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 230, 230, 230, 30, 224, 224, 224, 98, 228, 228, 228, 28, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 12,
"mipmaps": false,
"width": 12
}

[sub_resource type="ImageTexture" id="ImageTexture_r2ikx"]
image = SubResource("Image_tmdva")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_irr6g"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[node name="Main" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vcojj")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MenuHBox" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="File" type="MenuButton" parent="VBoxContainer/MenuHBox"]
visible = false
layout_mode = 2
text = "File"
switch_on_hover = true
item_count = 2
popup/item_0/text = "New Tree..."
popup/item_1/text = "Close All"
popup/item_1/id = 1
popup/item_1/separator = true

[node name="Edit" type="MenuButton" parent="VBoxContainer/MenuHBox"]
visible = false
layout_mode = 2
text = "Edit"
switch_on_hover = true

[node name="Debug" type="MenuButton" parent="VBoxContainer/MenuHBox"]
visible = false
layout_mode = 2
switch_on_hover = true

[node name="Seperator" type="Control" parent="VBoxContainer/MenuHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MakeFloating" type="Button" parent="VBoxContainer/MenuHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Make Rational editor floating."
icon = ExtResource("2_rhita")
flat = true

[node name="main" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/main"]
layout_mode = 2

[node name="VBoxTree" type="VBoxContainer" parent="VBoxContainer/main/VSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/main/VSplitContainer/VBoxTree"]
layout_mode = 2

[node name="SearchTree" type="LineEdit" parent="VBoxContainer/main/VSplitContainer/VBoxTree/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter..."
right_icon = ExtResource("3_w42pw")

[node name="AddRootButton" type="Button" parent="VBoxContainer/main/VSplitContainer/VBoxTree/HBoxContainer"]
layout_mode = 2
tooltip_text = "Add RationalComponent to root list."
theme_override_icons/icon = SubResource("ImageTexture_r2ikx")
icon = ExtResource("4_7na3o")
flat = true

[node name="ItemListRationalTrees" type="ItemList" parent="VBoxContainer/main/VSplitContainer/VBoxTree"]
custom_minimum_size = Vector2(128, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
fixed_icon_size = Vector2i(24, 24)
script = ExtResource("4_hbcub")

[node name="VBoxLeaf" type="VBoxContainer" parent="VBoxContainer/main/VSplitContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/main/VSplitContainer/VBoxLeaf"]
layout_mode = 2

[node name="SearchLeaf" type="LineEdit" parent="VBoxContainer/main/VSplitContainer/VBoxLeaf/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter..."
right_icon = ExtResource("3_w42pw")

[node name="RefreshListButton" type="Button" parent="VBoxContainer/main/VSplitContainer/VBoxLeaf/HBoxContainer"]
layout_mode = 2
theme_override_icons/icon = SubResource("ImageTexture_r2ikx")
icon = ExtResource("5_h6idu")
flat = true

[node name="TreeDisplay" type="Tree" parent="VBoxContainer/main/VSplitContainer/VBoxLeaf"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
select_mode = 1
scroll_horizontal_enabled = false
script = ExtResource("4_0erff")

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer/main"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
minimap_opacity = 0.55

[node name="GraphNode" type="GraphNode" parent="VBoxContainer/main/GraphEdit"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 113.0
offset_top = 122.0
offset_right = 222.0
offset_bottom = 225.0
mouse_filter = 1
position_offset = Vector2(113, 122)
title = "Inverter"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 1
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true

[node name="Label" type="Label" parent="VBoxContainer/main/GraphEdit/GraphNode"]
layout_mode = 2
text = "Test Item"

[node name="Label2" type="Label" parent="VBoxContainer/main/GraphEdit/GraphNode"]
layout_mode = 2
text = "Test Item"

[node name="GraphNode2" type="GraphNode" parent="VBoxContainer/main/GraphEdit"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
offset_left = 337.0
offset_top = 180.0
offset_right = 446.0
offset_bottom = 283.0
mouse_filter = 1
position_offset = Vector2(337, 180)
title = "Inverter"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 1
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true

[node name="Label" type="Label" parent="VBoxContainer/main/GraphEdit/GraphNode2"]
layout_mode = 2
text = "Test Item"

[node name="Label2" type="Label" parent="VBoxContainer/main/GraphEdit/GraphNode2"]
layout_mode = 2
text = "Test Item"

[node name="CollapsePanelContainer" type="PanelContainer" parent="VBoxContainer/main/GraphEdit"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.971
anchor_bottom = 0.971
offset_top = -28.2521
offset_right = 16.0
offset_bottom = -0.252075
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_irr6g")

[node name="ToggleLeft" type="TextureButton" parent="VBoxContainer/main/GraphEdit/CollapsePanelContainer"]
layout_mode = 2
tooltip_text = "Collapse/Uncollapse left panel."
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("4_on6xq")
texture_pressed = ExtResource("5_xutei")

[connection signal="pressed" from="VBoxContainer/MenuHBox/MakeFloating" to="." method="_on_make_floating"]
[connection signal="text_changed" from="VBoxContainer/main/VSplitContainer/VBoxTree/HBoxContainer/SearchTree" to="VBoxContainer/main/VSplitContainer/VBoxTree/ItemListRationalTrees" method="_on_filter_text_changed"]
[connection signal="pressed" from="VBoxContainer/main/VSplitContainer/VBoxTree/HBoxContainer/AddRootButton" to="VBoxContainer/main/VSplitContainer/VBoxTree/ItemListRationalTrees" method="_on_add_root_button_pressed"]
[connection signal="root_selected" from="VBoxContainer/main/VSplitContainer/VBoxTree/ItemListRationalTrees" to="VBoxContainer/main/VSplitContainer/VBoxLeaf/TreeDisplay" method="_on_root_selected"]
[connection signal="text_changed" from="VBoxContainer/main/VSplitContainer/VBoxLeaf/HBoxContainer/SearchLeaf" to="VBoxContainer/main/VSplitContainer/VBoxLeaf/TreeDisplay" method="_on_filter_text_changed"]
[connection signal="pressed" from="VBoxContainer/main/VSplitContainer/VBoxLeaf/HBoxContainer/RefreshListButton" to="VBoxContainer/main/VSplitContainer/VBoxLeaf/TreeDisplay" method="_on_refresh_list_button_pressed"]
[connection signal="button_clicked" from="VBoxContainer/main/VSplitContainer/VBoxLeaf/TreeDisplay" to="VBoxContainer/main/VSplitContainer/VBoxLeaf/TreeDisplay" method="_on_button_clicked"]
[connection signal="toggled" from="VBoxContainer/main/GraphEdit/CollapsePanelContainer/ToggleLeft" to="VBoxContainer/main/VSplitContainer" method="set_visible"]
